--- a/FPGA/.floorplanner.ini
+++ b/FPGA/.floorplanner.ini
@@ -2,7 +2,7 @@
 showNCD=true
 showPgroups=true
 showCongestion=false
-showConnsSelect=false
+showConnsSelect=true
 showConnsBetween=true
 showConnsOutside=true
 showLPF=true
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\x41\x2\xa4\x80\0\0\0\0@\xe3\xe7\0\0\0\0\0@\xe5[\x80\0\0\0\0@\xd1\x9e\0\0\0\0\0)
+sceneInViewRect=@Variant(\0\0\0\x14@\xe1\xf3i3\xa9\x66H@\xd6\xb1K\aX\x8f\xca\x41\x5q\x90\xb0\xbb\x91n@\xea\xac\x16\x46\xb9I})
