czyszczenie projektu CPU, nowa poprawka DSP

--- a/FPGA/.floorplanner.ini
+++ b/FPGA/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14@\xe1\xf3i3\xa9\x66H@\xd6\xb1K\aX\x8f\xca\x41\x5q\x90\xb0\xbb\x91n@\xea\xac\x16\x46\xb9I})
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xc2\x35\xcc\x65\xda?\x93\0\0\0\0\0\0\0\0\x41\x12\x90\xd9\x63\xd7\x82\xd1\x41\x3%!\xbf\xa7*\xd7)
