--- a/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
+++ b/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
@@ -21,6 +21,8 @@ encoding//Debug/Software/debug/subdir_rules.mk=UTF-8
 encoding//Debug/Software/debug/subdir_vars.mk=UTF-8
 encoding//Debug/Software/driver_i2c/subdir_rules.mk=UTF-8
 encoding//Debug/Software/driver_i2c/subdir_vars.mk=UTF-8
+encoding//Debug/Software/driver_mosfet/subdir_rules.mk=UTF-8
+encoding//Debug/Software/driver_mosfet/subdir_vars.mk=UTF-8
 encoding//Debug/Software/driver_rtc/subdir_rules.mk=UTF-8
 encoding//Debug/Software/driver_rtc/subdir_vars.mk=UTF-8
 encoding//Debug/Software/subdir_rules.mk=UTF-8
