--- a/FPGA/.floorplanner.ini
+++ b/FPGA/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\xc0\xc2\x35\xcc\x65\xda?\x93\0\0\0\0\0\0\0\0\x41\x12\x90\xd9\x63\xd7\x82\xd1\x41\x3%!\xbf\xa7*\xd7)
+sceneInViewRect=@Variant(\0\0\0\x14\x41\x3/\x1J@\xc4\x1c\0\0\0\0\0\0\0\0@\xdc\v\x8aU)gx@\xcfG\xf2\xe8\xd5\x90\xf3)
