testy Kalmana, Resonant

--- a/FPGA/.ncd_editor.ini
+++ b/FPGA/.ncd_editor.ini
@@ -14,15 +14,15 @@ DIFFDRIVE=100
 BANK_VCCIO=100
 HYSTERESIS=100
 TERMINATION=100
-SortColumns=
+SortColumns="1,"
 
 [PLLView]
 Name=100
 Type=100
 PHASEADJ=100
 FDEL=100
-SortColumns=
+SortColumns="2,"
 
 [MemoryTreeView]
-EBR%20Configuration=100
-Setting=1795
+EBR%20Configuration=954
+Setting=1208
