po testach mocowych

--- a/FPGA/.floorplanner.ini
+++ b/FPGA/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14\x41\x3/\x1J@\xc4\x1c\0\0\0\0\0\0\0\0@\xdc\v\x8aU)gx@\xcfG\xf2\xe8\xd5\x90\xf3)
+sceneInViewRect=@Variant(\0\0\0\x14@\xf0\xf1\x7f\\\xe3\xa9\xbf@\xe0y s\xc9\xfd\xf6\x41\x1\xc3\x1b\xcf~\xb5\xfe@\xe9\xf9r)xr\xb4)
