--- a/CPU/cpu01/.cproject
+++ b/CPU/cpu01/.cproject
@@ -194,7 +194,7 @@
 						</tool>
 					</fileInfo>
 					<sourceEntries>
-						<entry excluding="Software/CIC1_adaptive_filter_CPU.asm|F2837xD/Initializer_cpu02.asm|F2837xD/F2837xD_Headers_nonBIOS_cpu2.cmd|Software/Modbus/Modbus_ADU_master.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="F2837xD/Initializer_cpu02.asm|F2837xD/F2837xD_Headers_nonBIOS_cpu2.cmd|Software/Modbus/Modbus_ADU_master.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
