--- a/FPGA/.floorplanner.ini
+++ b/FPGA/.floorplanner.ini
@@ -11,4 +11,4 @@ showUGROUPs=true
 showPARITIONs=true
 showLogicalConnections=false
 dontShowBBoxOverlapWarning=false
-sceneInViewRect=@Variant(\0\0\0\x14@\xf0\xf1\x7f\\\xe3\xa9\xbf@\xe0y s\xc9\xfd\xf6\x41\x1\xc3\x1b\xcf~\xb5\xfe@\xe9\xf9r)xr\xb4)
+sceneInViewRect=@Variant(\0\0\0\x14\xc0\xeeX\v\xa2\xe8\xba/\0\0\0\0\0\0\0\0\x41\x19\b\rt]\x17\x46@\xfeoqt]\x17\x46)
