--- a/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
+++ b/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
@@ -52,6 +52,8 @@ encoding//Debug-for-encrypted-fw/Software/Modbus/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/Modbus/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/debug/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/debug/subdir_vars.mk=UTF-8
+encoding//Debug-for-encrypted-fw/Software/driver_eeprom/subdir_rules.mk=UTF-8
+encoding//Debug-for-encrypted-fw/Software/driver_eeprom/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/driver_i2c/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/driver_i2c/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/driver_mosfet/subdir_rules.mk=UTF-8
