dodanie do mapy danych hw_info z eepromu

--- a/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
+++ b/CPU/cpu01/.settings/org.eclipse.core.resources.prefs
@@ -50,6 +50,8 @@ encoding//Debug-for-encrypted-fw/FatFS/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/FatFS/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/Modbus/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/Modbus/subdir_vars.mk=UTF-8
+encoding//Debug-for-encrypted-fw/Software/common/subdir_rules.mk=UTF-8
+encoding//Debug-for-encrypted-fw/Software/common/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/debug/subdir_rules.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/debug/subdir_vars.mk=UTF-8
 encoding//Debug-for-encrypted-fw/Software/driver_eeprom/subdir_rules.mk=UTF-8
